issue fixed otp, ui stuck, overflow, profile img.

--- a/src/Frontend/auth/containers/register/register.component.scss
+++ b/src/Frontend/auth/containers/register/register.component.scss
@@ -290,3 +290,37 @@ a{
     .pass-contol{
         width: 100% !important;
     }
+
+    .toaster {
+        float: left;
+        width: auto;
+        position: fixed;
+        right: 50px;
+        top: 65px;
+        z-index: 9999;
+    }
+    
+    .toaster p {
+        padding: 8px;
+        font-size: 14px;
+        color: #fff;
+        margin: 0;
+        min-width: 250px;
+        text-align: center;
+        border-radius: 20px;
+        font-weight: 500;
+    
+    }
+    
+    .toaster p.error {
+        background-color: red;
+    
+    }
+    
+    .toaster p.success {
+        background-color: green;
+    }
+    
+    .toaster p.warn {
+        background-color: orange;
+    }
